@@ -1178,8 +1178,8 @@ public class GroupPersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsOrganization.contains(pk,
-							organizationPK));
+				Boolean value = Boolean.valueOf(containsOrganization.contains(
+							pk, organizationPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
@@ -1503,8 +1503,8 @@ public class GroupPersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsPermission.contains(pk,
-							permissionPK));
+				Boolean value = Boolean.valueOf(containsPermission.contains(
+							pk, permissionPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
@@ -1830,7 +1830,7 @@ public class GroupPersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsRole.contains(pk, rolePK));
+				Boolean value = Boolean.valueOf(containsRole.contains(pk, rolePK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
@@ -2156,7 +2156,7 @@ public class GroupPersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsUserGroup.contains(pk,
+				Boolean value = Boolean.valueOf(containsUserGroup.contains(pk,
 							userGroupPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
@@ -2479,7 +2479,7 @@ public class GroupPersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsUser.contains(pk, userPK));
+				Boolean value = Boolean.valueOf(containsUser.contains(pk, userPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
