@@ -1476,7 +1476,8 @@ public class OrganizationPersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsGroup.contains(pk, groupPK));
+				Boolean value = Boolean.valueOf(containsGroup.contains(pk,
+							groupPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
@@ -1797,7 +1798,7 @@ public class OrganizationPersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsUser.contains(pk, userPK));
+				Boolean value = Boolean.valueOf(containsUser.contains(pk, userPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
