@@ -1092,7 +1092,8 @@ public class RolePersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsGroup.contains(pk, groupPK));
+				Boolean value = Boolean.valueOf(containsGroup.contains(pk,
+							groupPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
@@ -1414,8 +1415,8 @@ public class RolePersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsPermission.contains(pk,
-							permissionPK));
+				Boolean value = Boolean.valueOf(containsPermission.contains(
+							pk, permissionPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
@@ -1737,7 +1738,7 @@ public class RolePersistenceImpl extends BasePersistence
 
 		if (result == null) {
 			try {
-				Boolean value = new Boolean(containsUser.contains(pk, userPK));
+				Boolean value = Boolean.valueOf(containsUser.contains(pk, userPK));
 				FinderCache.putResult(finderClassName, finderMethodName,
 					finderParams, finderArgs, value);
 
